[bdist_wheel]
universal = 1

[metadata]
name = TeslaPy
version = 2.0.0
author = Tim Dorssers
author_email = tim.dorssers@xs4all.nl
description = A Python module to use the Tesla Motors Owner API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdorssers/TeslaPy
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
install_requires =
    requests >= 2.4.2
    requests_oauthlib
    websocket-client >= 0.59.0
